add option to add new category

--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -50,6 +50,9 @@
             <li>
               <%= link_to 'Products' , [:admin, :products] %>
             </li>
+            <li>
+              <%= link_to 'Categories' , [:admin, :categories] %>
+            </li>
           </ul>
         </li>
         <li>
